Ticketing project insted of product Version from project link

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<% ticket_project = ticket_project_name(@product.ticket_project_id)%>
+
 <h1>Product: <%= @product.name %></h1>
 
 <div class="row-fluid">
@@ -14,8 +16,12 @@
           <td><%= @product.description %></td>
         </tr>
         <tr>
-        	<td class="title">Ticketing Product</td>
-        	<td><%= ticket_product_name(@product.ticket_product_id) %></td>
+          <td class="title">Ticketing Project</td>
+          <td><%= ticket_project[:name] %></td>
+        </tr>
+        <tr>
+          <td class="title">Ticketing Project Description</td>
+          <td><%= format_project_description(ticket_project[:description]).html_safe %></td>
         </tr>
       </tbody>
     </table>
