--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,7 +5,7 @@
   
 		<%= f.input :name %>
 		<%= f.input :description, :input_html => { :rows => 5, :class => "input-xxlarge"} %>
-		<%= f.input :ticket_product_id, as: :select, collection: list_of_ticket_product %>
+		<%= f.input :ticket_project_id, as: :select, collection: list_of_ticket_projects %>
 
     <div class="control-group">
       <%= f.label :name, "Select authorized users" %>
