--- a/app/views/versions/_form.html.erb
+++ b/app/views/versions/_form.html.erb
@@ -6,7 +6,8 @@
         <%= f.association :product, collection: product_list %>
         <%= f.input :version %>
       	<%= f.input :description, :input_html => { :rows => 5, :class => "input-xxlarge"}   %>
-      	
+      	<%= f.input :ticket_version_id, as: :select, collection: list_of_ticket_versions %>
+
       	<div class="actions">
           <% unless @version.id %>	
             <%= f.submit nil, :class => "btn btn-success"%>
