Route for version Version ajax Assignment bug attachments

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -46,6 +46,8 @@ label {font-weight:bold;}
 .moduleHeader{ padding-left: 15px; font-weight: bold;}
 textarea { white-space:pre-wrap;}
 .description { white-space:pre-wrap; padding-left: 10px;}
+.select-xxlarge { min-width: 544px; min-height: 100px; }
+
 
 /* Comment module */
 .commentModule {margin-left: auto; margin-right: auto; padding: 7px; margin: 5px 5px 20px 5px; border-top: solid #999999; border-bottom: solid #999999; }
