--- a/app/views/versions/_form.html.erb
+++ b/app/views/versions/_form.html.erb
@@ -6,8 +6,11 @@
         <%= f.association :product, collection: product_list %>
         <%= f.input :version %>
       	<%= f.input :description, :input_html => { :rows => 5, :class => "input-xxlarge"}   %>
-        <%= f.input :ticket_version_id, as: :select, collection: list_ticket_versions %>
-
+        <% if @version.product.present? %>
+          <%= f.input :ticket_version_id, as: :select, collection: list_ticket_versions(@version.product.id) %>
+        <% else %>
+          <%= f.input :ticket_version_id, as: :select, collection: list_ticket_versions(-1), disabled: true %>
+        <% end %>
       	<div class="actions">
           <% unless @version.id %>	
             <%= f.submit nil, :class => "btn btn-success"%>
