--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,5 +15,7 @@
   <%= render "histories/list"%>
   </div>
 </div>
-
+<div>
+  Ticket: <%= Setting.value('Ticket System') %>
+</div>
 <div class="clearfix"></div>
