--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,14 +15,16 @@
           <td class="title">Description</td>
           <td><%= @product.description %></td>
         </tr>
-        <tr>
-          <td class="title">Ticketing Project</td>
-          <td><%= ticket_project[:name] %></td>
-        </tr>
-        <tr>
-          <td class="title">Ticketing Project Description</td>
-          <td><%= format_project_description(ticket_project[:description]).html_safe %></td>
-        </tr>
+        <% if (Setting.value('Ticket System').present?) %>
+          <tr>
+            <td class="title">Ticketing Project</td>
+            <td><%= ticket_project[:name] %></td>
+          </tr>
+          <tr>
+            <td class="title">Ticketing Project Description</td>
+            <td><%= format_project_description(ticket_project[:description]).html_safe %></td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
   </div>
