--- a/app/views/versions/show.html.erb
+++ b/app/views/versions/show.html.erb
@@ -21,16 +21,17 @@
           <td class="title">Product</td>
           <td><%= @version.product.name %></td>
         </tr>
-        
-        <tr>
-          <td class="title">Ticketing Version</td>
-          <td><%= ticket_version[:name] %></td>
-        </tr>
+        <% if Setting.value('Ticket System').present? %>
+          <tr>
+            <td class="title">Ticketing Version</td>
+            <td><%= ticket_version[:name] %></td>
+          </tr>
 
-        <tr>
-          <td class="title">Ticketing Version Description</td>
-          <td><%= ticket_version[:description] %></td>
-        </tr>
+          <tr>
+            <td class="title">Ticketing Version Description</td>
+            <td><%= ticket_version[:description] %></td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
   </div>
