Add a new report type allowing to show the current detailed status of a product test plans.

--- a/app/views/reports/run.html.erb
+++ b/app/views/reports/run.html.erb
@@ -12,6 +12,8 @@
   <%= render 'compare_release_results' %>
 <% when @report.report_type == "Compare Release Results - Detailed" %>
   <%= render 'compare_release_results_detailed' %>
+<% when @report.report_type == "Release Results - Detailed" %>
+  <%= render 'release_results_detailed' %>
 <% when @report.report_type == "Test Cases without Steps" %>
   <%= render 'test_cases_without_steps' %>
 <% when @report.report_type == "Open Tasks" %>
