Set classes to headers of report release results detailed for proper sorting.

--- a/app/views/reports/_release_results_detailed.html.erb
+++ b/app/views/reports/_release_results_detailed.html.erb
@@ -1,10 +1,10 @@
 <table class="sortable_table">
   <thead>
     <tr class="sortableHeader">
-      <th>Test Plan</th>
-      <th>Test Case</th>
-      <th><%= @report.version.version %> Result</th>
-      <th><%= @report.version.version %> Comment</th>
+      <th class="type-string">Test Plan</th>
+      <th class="type-string">Test Case</th>
+      <th class="type-string"><%= @report.version.version %> Result</th>
+      <th class="type-string"><%= @report.version.version %> Comment</th>
     </tr>
   </thead>
   <tbody>
