Squashed commit of the following:
commit cdca008dada764299773567a7e668d5110322f35
Author: erwan <erwan.koffi@gmail.com>
Date:   Mon Oct 27 09:09:15 2014 +0100

    Issues list updated

commit 5d56e13ea22006421cbc3c81d9c179ed692a64a0
Author: erwan <erwan.koffi@gmail.com>
Date:   Wed Oct 22 16:34:15 2014 +0200

    Execution date on assignment export

commit 6d8573b0ca460d2704b09d491b217732cb7d6b18
Author: erwan <erwan.koffi@gmail.com>
Date:   Wed Oct 22 12:05:23 2014 +0200

    Pdf export for assignments

commit e3dbd49e62487b2122c1b9ccd8ce52bd34b10288
Author: erwan <erwan.koffi@gmail.com>
Date:   Tue Oct 21 18:44:59 2014 +0200

    Pdf generation for assignment

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -126,7 +126,7 @@
           <tr class="<%= cycle('odd', 'even') %>">
             <td><%= issue[0] %></td>
             <td><%= issue[1][:name] %></td>
-            <td><%= issue[1][:description] %></td>
+            <td><%= format_ticket_text(issue[1][:description]).html_safe %></td>
             <td><%= issue[1][:status] %></td>
           </tr>
         <% end %>
@@ -140,4 +140,5 @@
 <%= link_to "Edit", edit_assignment_path(@assignment), :class => "btn btn-primary"  %>
 <% end %>
 <a href='#' onclick='history.go(-1);return false;', class="btn btn-inverse">Back</a>
+<%= link_to "Export PDF", assignment_path(@assignment, :format => "pdf"), :class => "btn btn-info"%>
 </div>
