--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,7 @@
           </tr>
           <tr>
             <td class="title">Ticketing Project Description</td>
-            <td><%= format_project_description(ticket_project[:description]).html_safe %></td>
+            <td><%= format_ticket_text(ticket_project[:description]).html_safe %></td>
           </tr>
         <% end %>
       </tbody>
