--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,8 @@
  *= require jquery-ui
  *= require_tree .
  */
- 
+
+@import "bootstrap-sprockets"; 
 @import "bootstrap";
 
 body { padding-top: 60px; }
