* bootstrap alerts + docker for dev

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -170,7 +170,7 @@
                 </div>
                 <% flash.each do |name, msg| %>
                 <% if msg.is_a?(String) %>
-                <div class="alert alert-dismissable alert-<%= name == :notice ? "success" : "error" %>">
+                <div class="alert alert-dismissable alert-<%= name %>">
                     <a class="close" data-dismiss="alert">&#215;</a>
                     <%= content_tag :div, msg, :id => "flash_#{name}" %>
                 </div>
