--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,16 @@
 <div class="row-fluid">
-  <div class="span12">
+  <div class="col-lg-12 col-md-12, col-sm-12">
     <h1>Welcome</h1>
   </div>
 </div>
 
 <div class="row-fluid">
-  <div class='span6'>
+  <div class='col-lg-6 col-md-6 col-sm-6'>
   <legend class="show">My Tasks</legend>
   <%= render "tasks/users_tasks"%>
   </div>
 
-  <div class='span6'>
+  <div class='col-lg-6 col-md-6 col-sm-6'>
   <legend class="show">Recent Activity</legend>
   <%= render "histories/list"%>
   </div>
