--- a/app/views/tasks/_comments.html.erb
+++ b/app/views/tasks/_comments.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <div class="span12">
+  <div class="col-lg-12 col-md-12">
     <legend>Comments</legend>
     <div id='comments'>
     	<% if @task.comments.count == 0 %>
@@ -31,11 +31,11 @@
         </div>
       <% end %>
 
-      <div class="field">
-        <%= f.text_area :comment, :rows => 1, :class => 'inactiveTextField input-xxlarge', :title => "Add a comment." %>
+      <div class="field row">
+        <%= f.text_area :comment, :rows => 1, :class => 'inactiveTextField col-lg-3 col-md-3', :title => "Add a comment." %>
       </div>
 
-      <div class="hiddenActions">
+      <div class="hiddenActions row">
         <%= f.submit nil, :class =>  "btn btn-success" %>
       </div>
     <% end %>
