--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Tasks</h1>
 
 <div class="row-fluid">
-  <div class="span12">
+  <div class="col-lg-12 col-md-12">
     <table class="sortable_table">
       <tr class="sortableHeader">
     	  <th><%= sortable "name" %></th>
