--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Task: <%= @task.name %></h2>
 <div class="row-fluid">
-  <div class="span12">
+  <div class="col-lg-12 col-md-12">
     <legend class="show">Task Overview</legend>
     <table class="table">
       <tbody>
@@ -49,7 +49,7 @@
   <% if can? :update, Task %>
     <%= link_to "Edit", edit_task_path(@task), :class => "btn btn-primary"  %>
   <% end %>
-  <a href='#' onclick='history.go(-1);return false;', class="btn btn-inverse">Back</a>
+  <a href='#' onclick='history.go(-1);return false;', class="btn btn-default">Back</a>
 </div>
 
 <%= render 'comments' %>
